--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.1/css/all.css"
         integrity="sha384-vp86vTRFVJgpjF9jiIGPEEqYqlDwgyBgEF109VFjmqGmIY/Y4HV4d3Gp2irVfcrp" crossorigin="anonymous">
     <title>dngtalk</title>
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 
 <body>
@@ -27,15 +28,14 @@
     </div>
     <header class="welcome-header">
         <h1>Welcome to DngTalk</h1>
-        <p>If you hav a DngTalk Account,</br> log in with your email or phone number.</p>
+        <p>If you have a DngTalk Account,</br> log in with your email or phone number.</p>
     </header>
     <form action="/" method="POST" class="login-form">
         <input type="text" placeholder="Email or phone number">
         <input type="password" placeholder="Password">
-        <input class="login-form__btn" type="submit" value="Log In">
+        <input type="submit" value="Log In">
+        <a href="#" class="">Find Dngtalk Account or Password</a>
     </form>
-    <button class="login-form__btn">Sign Up</button>
-    <a href="#">Find Dngtalk Account or Password</a>
 </body>
 
 </html>
