fix: index.html form 속성 변경, input에 name 추가, css파일 모듈화 변경 / update: friends.html 추가

--- a/friends.html
+++ b/friends.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.1/css/all.css"
         integrity="sha384-vp86vTRFVJgpjF9jiIGPEEqYqlDwgyBgEF109VFjmqGmIY/Y4HV4d3Gp2irVfcrp" crossorigin="anonymous">
-    <title>login | dngtalk</title>
+    <title>friends | dngtalk</title>
     <link rel="stylesheet" href="css/styles.css">
 </head>
 
@@ -31,8 +31,8 @@
         <p>If you have a DngTalk Account,</br> log in with your email or phone number.</p>
     </header>
     <form action="friends.html" method="GET" class="login-form">
-        <input name="email" type="text" placeholder="Email or phone number">
-        <input name="password" type="password" placeholder="Password">
+        <input type="text" placeholder="Email or phone number">
+        <input type="password" placeholder="Password">
         <input type="submit" value="Log In">
         <a href="#" class="">Find Dngtalk Account or Password</a>
     </form>
