--- a/friends.html
+++ b/friends.html
@@ -26,16 +26,31 @@
             <i class="fas fa-bolt"></i>
         </div>
     </div>
-    <header class="welcome-header">
-        <h1>Welcome to DngTalk</h1>
-        <p>If you have a DngTalk Account,</br> log in with your email or phone number.</p>
-    </header>
-    <form action="friends.html" method="GET" class="login-form">
-        <input type="text" placeholder="Email or phone number">
-        <input type="password" placeholder="Password">
-        <input type="submit" value="Log In">
-        <a href="#" class="">Find Dngtalk Account or Password</a>
-    </form>
+
+    <nav class="nav">
+        <ul class="nav__list">
+            <div class="nav__item">
+                <a href="#" class="nav__link">
+                    <i class="fas fa-user fa-2x"></i>
+                </a>
+            </div>
+            <div class="nav__item">
+                <a href="#" class="nav__link">
+                    <i class="fas fa-comment fa-2x"></i>
+                </a>
+            </div>
+            <div class="nav__item">
+                <a href="#" class="nav__link">
+                    <i class="fas fa-search fa-2x"></i>
+                </a>
+            </div>
+            <div class="nav__item">
+                <a href="#" class="nav__link">
+                    <i class="fas fa-ellipsis-h fa-2x"></i>
+                </a>
+            </div>
+        </ul>
+    </nav>
 </body>
 
 </html>
