--- a/friends.html
+++ b/friends.html
@@ -36,6 +36,7 @@
             </div>
             <div class="nav__item">
                 <a href="#" class="nav__link">
+                    <span class="nav__notification">1</span>
                     <i class="fas fa-comment fa-2x"></i>
                 </a>
             </div>
