--- a/friends.html
+++ b/friends.html
@@ -26,7 +26,20 @@
             <i class="fas fa-bolt"></i>
         </div>
     </div>
-
+    <header class="screen-header">
+        <h1 class="screen-header__title">Friends</h1>
+        <ul class="screen-header__icons">
+            <li class="screen-header__icon">
+                <i class="fas fa-search fa-lg"></i>
+            </li>
+            <li class="screen-header__icon">
+                <i class="fas fa-music fa-lg"></i>
+            </li>
+            <li class="screen-header__icon">
+                <i class="fas fa-cog fa-lg"></i>
+            </li>
+        </ul>
+    </header>
     <nav class="nav">
         <ul class="nav__list">
             <div class="nav__item">
