--- a/friends.html
+++ b/friends.html
@@ -40,6 +40,11 @@
             </li>
         </ul>
     </header>
+    <a id="friends-display-link">
+        <i class="fas fa-info-circle"></i>
+        <span>Friends' Names Display</span>
+        <i class="fas fa-chevron-right fa-xs"></i>
+    </a>
     <nav class="nav">
         <ul class="nav__list">
             <div class="nav__item">
