friends.html - friends-screen 부분 html, css 작업

--- a/friends.html
+++ b/friends.html
@@ -45,6 +45,34 @@
         <span>Friends' Names Display</span>
         <i class="fas fa-chevron-right fa-xs"></i>
     </a>
+    <main class="friends-screen">
+        <ul class="user-component">
+            <li class="user-component__column">
+                <img src="https://i.ytimg.com/vi/YRdI-dcyepg/maxresdefault.jpg" alt="avatar"
+                    class="user-component__avatar">
+                <div class="user-component__text">
+                    <h4 class="user-component__title">Dongwoo</h4>
+                    <h6 class="user-component__subtitle">Fuck!!</h6>
+                </div>
+            </li>
+        </ul>
+        <div class="friends-screen__channel">
+            <div class="friends-screen__channel-header">
+                <span>Channel</span>
+                <i class="fas fa-chevron-up fa-xs"></i>
+            </div>
+            <ul class="user-component">
+                <li class="user-component__column">
+                    <img src="https://avatars3.githubusercontent.com/u/3612017" alt="avatar"
+                        class="user-component__avatar user-component__avatar--sm">
+                    <div class="user-component__text">
+                        <h4 class="user-component__title user-component__title--not-bold">YuGesh</h4>
+                        <h6 class="user-component__subtitle">No pain, no gain</h6>
+                    </div>
+                </li>
+            </ul>
+        </div>
+    </main>
     <nav class="nav">
         <ul class="nav__list">
             <div class="nav__item">
