--- a/friends.html
+++ b/friends.html
@@ -46,53 +46,57 @@
         <i class="fas fa-chevron-right fa-xs"></i>
     </a>
     <main class="friends-screen">
-        <ul class="user-component">
-            <li class="user-component__column">
+        <div class="user-component">
+            <div class="user-component__column">
                 <img src="https://i.ytimg.com/vi/YRdI-dcyepg/maxresdefault.jpg" alt="avatar"
                     class="user-component__avatar">
                 <div class="user-component__text">
                     <h4 class="user-component__title">Dongwoo</h4>
                     <h6 class="user-component__subtitle">Fuck!!</h6>
                 </div>
-            </li>
-        </ul>
+            </div>
+            <div class="user-component__column">
+                <span>2</span>
+                <i class="fas fa-chevron-right fa-xs"></i>
+            </div>
+        </div>
         <div class="friends-screen__channel">
             <div class="friends-screen__channel-header">
-                <span>Channel</span>
+                <span>friends</span>
                 <i class="fas fa-chevron-up fa-xs"></i>
             </div>
-            <ul class="user-component">
-                <li class="user-component__column">
+            <div class="user-component">
+                <div class="user-component__column">
                     <img src="https://avatars3.githubusercontent.com/u/3612017" alt="avatar"
                         class="user-component__avatar user-component__avatar--sm">
                     <div class="user-component__text">
                         <h4 class="user-component__title user-component__title--not-bold">YuGesh</h4>
                         <h6 class="user-component__subtitle">No pain, no gain</h6>
                     </div>
-                </li>
-            </ul>
+                </div>
+            </div>
         </div>
     </main>
     <nav class="nav">
         <ul class="nav__list">
             <div class="nav__item">
-                <a href="#" class="nav__link">
+                <a href="friends.html" class="nav__link">
                     <i class="fas fa-user fa-2x"></i>
                 </a>
             </div>
             <div class="nav__item">
-                <a href="#" class="nav__link">
+                <a href="chats.html" class="nav__link">
                     <span class="nav__notification">1</span>
                     <i class="fas fa-comment fa-2x"></i>
                 </a>
             </div>
             <div class="nav__item">
-                <a href="#" class="nav__link">
+                <a href="find.html" class="nav__link">
                     <i class="fas fa-search fa-2x"></i>
                 </a>
             </div>
             <div class="nav__item">
-                <a href="#" class="nav__link">
+                <a href="more.html" class="nav__link">
                     <i class="fas fa-ellipsis-h fa-2x"></i>
                 </a>
             </div>
