--- a/friends.html
+++ b/friends.html
@@ -56,8 +56,10 @@
                 </div>
             </div>
             <div class="user-component__column">
-                <span>2</span>
-                <i class="fas fa-chevron-right fa-xs"></i>
+                <span>
+                    2
+                    <i class="fas fa-chevron-right fa-xs"></i>
+                </span>
             </div>
         </div>
         <div class="friends-screen__channel">
