update: find.html - recommended friends 부분 html, css 작업

--- a/find.html
+++ b/find.html
@@ -56,6 +56,15 @@
                 <span>Invite</span>
             </div>
         </div>
+
+        <div class="recommended-friends">
+            <h6 class="recommended-frineds__title">
+                Recommended Friends
+            </h6>
+            <span>
+                You have no recommended friends.
+            </span>
+        </div>
     </main>
 
     <nav class="nav">
