--- a/settings.html
+++ b/settings.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="css/styles.css" />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Settings - Kokoa Clone</title>
+    <title>settings | dngtalk</title>
 </head>
 
 <body>
@@ -18,8 +18,9 @@
             <span>18:43</span>
         </div>
         <div class="status-bar__column">
+            <i class="fas fa-lock"></i>
             <span>11%</span>
-            <i class="fas fa-battery-full fa-lg"></i>
+            <i class="fas fa-battery-full"></i>
             <i class="fas fa-bolt"></i>
         </div>
     </div>
