--- a/chat.html
+++ b/chat.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="css/styles.css" />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Chat w/ dngwoo | dngtalk</title>
+    <title>Chat w/ 아린 | dngtalk</title>
 </head>
 
 <body id="chat-screen">
@@ -27,12 +27,12 @@
 
     <header class="alt-header">
         <div class="alt-header__column">
-            <a href="more.html">
+            <a href="chats.html">
                 <i class="fas fa-angle-left fa-3x"></i>
             </a>
         </div>
         <div class="alt-header__column">
-            <h1 class="alt-header__title">니꼬</h1>
+            <h1 class="alt-header__title">아린</h1>
         </div>
         <div class="alt-header__column">
             <span><i class="fas fa-search fa-lg"></i></span>
@@ -40,7 +40,29 @@
         </div>
     </header>
 
-    <main class="main-screen"></main>
+    <main class="main-screen main-chat">
+        <div class="chat__timestamp">
+            Tuesday, June 30, 2020
+        </div>
+        <div class="message-row">
+            <img src="https://avatars3.githubusercontent.com/u/3612017" />
+            <div class="message-row__content">
+                <span class="message__author">Nicolas</span>
+                <div class="message__info">
+                    <span class="message__bubble">Hi!</span>
+                    <span class="message__time">21:27</span>
+                </div>
+            </div>
+        </div>
+        <div class="message-row message-row--own">
+            <div class="message-row__content">
+                <div class="message__info">
+                    <span class="message__bubble">Hi nice to meet you!</span>
+                    <span class="message__time">21:27</span>
+                </div>
+            </div>
+        </div>
+    </main>
 
     <script src="https://kit.fontawesome.com/6478f529f2.js" crossorigin="anonymous"></script>
 </body>
