--- a/friends.html
+++ b/friends.html
@@ -104,6 +104,9 @@
             </div>
         </ul>
     </nav>
+    <div id="splash-screen">
+        <i class="fas fa-comment"></i>
+    </div>
 </body>
 
 </html>
