--- a/friends.html
+++ b/friends.html
@@ -88,7 +88,7 @@
             </div>
             <div class="nav__item">
                 <a href="chats.html" class="nav__link">
-                    <span class="nav__notification">1</span>
+                    <span class="nav__notification badge">1</span>
                     <i class="fas fa-comment fa-2x"></i>
                 </a>
             </div>
