fix: nav icon 들 해당 페이지에 맞게 수정, setting icon(cog)를 누르면 settings 페이지에 들어갈 수있게 a태그 추가

--- a/friends.html
+++ b/friends.html
@@ -36,7 +36,11 @@
                 <i class="fas fa-music fa-lg"></i>
             </li>
             <li class="screen-header__icon">
-                <i class="fas fa-cog fa-lg"></i>
+                <a href="settings.html">
+                    <i class="fas fa-cog fa-lg">
+
+                    </i>
+                </a>
             </li>
         </ul>
     </header>
@@ -89,7 +93,7 @@
             <div class="nav__item">
                 <a href="chats.html" class="nav__link">
                     <span class="nav__notification badge">1</span>
-                    <i class="fas fa-comment fa-2x"></i>
+                    <i class="far fa-comment fa-2x"></i>
                 </a>
             </div>
             <div class="nav__item">
