--- a/find.html
+++ b/find.html
@@ -32,7 +32,11 @@
                 <i class="fas fa-search fa-lg"></i>
             </li>
             <li class="screen-header__icon">
-                <i class="fas fa-cog fa-lg"></i>
+                <a href="settings.html">
+                    <i class="fas fa-cog fa-lg">
+
+                    </i>
+                </a>
             </li>
         </ul>
     </header>
@@ -98,13 +102,13 @@
         <ul class="nav__list">
             <div class="nav__item">
                 <a href="friends.html" class="nav__link">
-                    <i class="fas fa-user fa-2x"></i>
+                    <i class="far fa-user fa-2x"></i>
                 </a>
             </div>
             <div class="nav__item">
                 <a href="chats.html" class="nav__link">
                     <span class="nav__notification badge">1</span>
-                    <i class="fas fa-comment fa-2x"></i>
+                    <i class="far fa-comment fa-2x"></i>
                 </a>
             </div>
             <div class="nav__item">
