update: img src 및 text 변경

--- a/chat.html
+++ b/chat.html
@@ -45,9 +45,10 @@
             Tuesday, June 30, 2020
         </div>
         <div class="message-row">
-            <img src="https://avatars3.githubusercontent.com/u/3612017" />
+            <img
+                src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcTHDqWtj10yw6o9WIxNfj6VW-kdJlV3BNdlOg&usqp=CAU" />
             <div class="message-row__content">
-                <span class="message__author">Nicolas</span>
+                <span class="message__author">YuGesh</span>
                 <div class="message__info">
                     <span class="message__bubble">Hi!</span>
                     <span class="message__time">21:27</span>
@@ -57,7 +58,7 @@
         <div class="message-row message-row--own">
             <div class="message-row__content">
                 <div class="message__info">
-                    <span class="message__bubble">Hi nice to meet you!</span>
+                    <span class="message__bubble">I'm happy!</span>
                     <span class="message__time">21:27</span>
                 </div>
             </div>
