--- a/friends.html
+++ b/friends.html
@@ -52,11 +52,11 @@
     <main class="friends-screen">
         <div class="user-component">
             <div class="user-component__column">
-                <img src="https://i.ytimg.com/vi/YRdI-dcyepg/maxresdefault.jpg" alt="avatar"
-                    class="user-component__avatar">
+                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcR5KfUTwKYxFXpZYw9qOBj0bKc7sscBMcvFbg&usqp=CAU"
+                    alt="avatar" class="user-component__avatar">
                 <div class="user-component__text">
-                    <h4 class="user-component__title">Dongwoo</h4>
-                    <h6 class="user-component__subtitle">Fuck!!</h6>
+                    <h4 class="user-component__title">Dong Woo</h4>
+                    <h6 class="user-component__subtitle">TypeScript 공부중!</h6>
                 </div>
             </div>
             <div class="user-component__column">
@@ -73,8 +73,8 @@
             </div>
             <div class="user-component">
                 <div class="user-component__column">
-                    <img src="https://avatars3.githubusercontent.com/u/3612017" alt="avatar"
-                        class="user-component__avatar user-component__avatar--sm">
+                    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcTHDqWtj10yw6o9WIxNfj6VW-kdJlV3BNdlOg&usqp=CAU"
+                        alt="avatar" class="user-component__avatar user-component__avatar--sm">
                     <div class="user-component__text">
                         <h4 class="user-component__title user-component__title--not-bold">YuGesh</h4>
                         <h6 class="user-component__subtitle">No pain, no gain</h6>
