--- a/more.html
+++ b/more.html
@@ -47,10 +47,10 @@
     <main class="main-screen more-screen">
         <div class="user-component">
             <div class="user-component__column">
-                <img src="https://avatars3.githubusercontent.com/u/3612017"
+                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcR5KfUTwKYxFXpZYw9qOBj0bKc7sscBMcvFbg&usqp=CAU"
                     class="user-component__avatar user-component__avatar--xl" />
                 <div class="user-component__text">
-                    <h4 class="user-component__title">Nicolas</h4>
+                    <h4 class="user-component__title">Dong Woo</h4>
                     <h6 class="user-component__subtitle">+ 787 666 999</h6>
                 </div>
             </div>
